--- a/meri_dashboard_final.html
+++ b/meri_dashboard_final.html
@@ -75,11 +75,11 @@
     li input[type="checkbox"] {
       flex-shrink: 0;
     }
-    li span {
-      flex: 1;
-      word-break: break-word;
-      text-align: left;
-    }
+   li span {
+  text-align: left;
+  font-size: 1em;
+  line-height: 1.4;
+}
     .remove-btn {
       margin-left: auto;
       background: red;
